<resources>
    <string name="app_name">Bicycle Revisions</string>
    <string name="title_list_rev">List of revisions</string>
    <string name="id_list_rev">ID</string>
    <string name="status_list_rev">Status</string>
    <string name="details_button">Details</string>
    <string name="title_activity_login">Login</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_field_required">Must put an email</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_incorrect_password">Incorrect Password</string>
    <string name="emailField">Email</string>
    <string name="passwordField">Password</string>
    <string name="loginButton">Sign In</string>
    <string name="registerButton">Sign out</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="address">Address</string>
    <string name="telephone">Telephone</string>
    <string name="mechanic_created">Mechanic has been created</string>
    <string name="error_used_email">The email is already used</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_add">Add a revision</string>
    <string name="mechanic_edited">Mechanic has been edited</string>
    <string name="action_delete">Delete</string>
    <string name="delete_msg">Do you really want to delete your account ?</string>
    <string name="action_cancel">Cancel</string>
    <string name="ownerLastname">Owner Lastname</string>
    <string name="ownerAddress">Owner Address</string>
    <string name="ownerphone">Owner Phone</string>
    <string name="bikecreated">Bike has beed added</string>
    <string name="delete_msg_bike">Do you really want to delete this bike ?</string>
    <string name="error_non_null">Cannot be empty</string>
    <string name="bike_edited">Bike has been edited</string>
    <string name="bike_not_edited">Bike has not been edited. Try again !</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_about">About</string>
    <string name="pref_about_text">This is an application where machnics can manage their bicycles revisions.</string>
    <string name="loginError">Invalid login credentials</string>
</resources>