<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mechanic.MechanicActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:text="Bike - Details"
            android:textSize="40dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/typeBikeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Type of Bike"
            android:inputType="text"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/problemBikeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Probleme of Bike"
            android:inputType="text"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            />

        <EditText
            android:id="@+id/firstnameBikeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Owner Firstname"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/lastnameBikeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/ownerLastname"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/addressBikeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/ownerAddress"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/phoneBikeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/ownerphone"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editBike"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Edit"/>

            <Button
                android:id="@+id/deleteBike"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="37dp"
                android:text="Delete" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelBike"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Cancel"/>

            <Button
                android:id="@+id/saveBike"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="37dp"
                android:text="Save" />
        </LinearLayout>
        <Button
            android:id="@+id/finishBike"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Finish"
            android:layout_gravity="center" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>